fixed scroll on gallery section/fixed collapse button jump

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ h4.more-videos {
 
 .main-image {
     height: 80vh;
-    max-width: 100vw;
+    max-width: 80vw;
     background: url("../images/damien-hero.jpg") no-repeat;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
@@ -238,6 +238,10 @@ div.column {
     padding-bottom: 50px;
 }
 
+div.container.gallery-container {
+    background-color: black;
+}
+
 /*------------------------------------video Section------------------------------------------*/
 
 .videos-section {
@@ -389,7 +393,6 @@ p.card-text {
 }
 /*navbar collapse to display on mobile*/
 .navbar {
-    float: right;
     font-size: 25px;
     text-align: center;
 }
@@ -404,6 +407,10 @@ button.navbar-toggler {
 /*hero images to display on mobile*/
 figure.img {
     max-height: 60vh;
+}
+
+figure.img.main-image {
+    max-width: 100vw;
 }
 
 figure.img.contact-image {
@@ -461,6 +468,12 @@ hr.gallery-space {
 figure.img.contact-image {
     background-size: 100% 130%;
 }
+
+/*contact form view fix for mobile*/
+div.contact-form.container {
+    width: 90%;
+}
+
 /*spacing for icons in footer*/
 .social i {
     letter-spacing: 15px;
